turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:13: error: too many arguments for constructor Array: (_length: Int)Array[Int]
var T = new Array[Int](1,8,0)
        ^Turmite:14: error: too many arguments for constructor Array: (_length: Int)Array[Int]
var U = new Array[Int](1,0,0)
        ^Turmite:15: error: too many arguments for constructor Array: (_length: Int)Array[Int]
var V = new Array[Int](0,0,0)
        ^Turmite:16: error: too many arguments for constructor Array: (_length: Int)Array[Int]
var W = new Array[Int](0,0,1)
        ^Turmite:17: error: not found: type U
var rule:Array[Array[Array[Int]]] = T[U[V[W]]]
                                      ^Turmite:50: error: not found: value setCouleur
  	setCouleur
        ^